// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build-gear getBuildHand base 1`] = `
{
  "action": {
    "type": "build",
  },
  "entities": {
    "-1.-1": {
      "angle": 0,
      "center": {
        "x": 0,
        "y": 0,
      },
      "connections": [],
      "id": "-1.-1",
      "mass": 3.141592653589793,
      "networkId": "-1.-1",
      "position": {
        "x": -1,
        "y": -1,
      },
      "radius": 1,
      "size": {
        "x": 2,
        "y": 2,
      },
      "type": "Gear",
      "velocity": 0,
    },
  },
  "networks": {
    "-1.-1": {
      "entityIds": {
        "-1.-1": true,
      },
      "id": "-1.-1",
      "mass": 3.141592653589793,
      "rootId": "-1.-1",
    },
  },
  "type": "build",
  "valid": true,
}
`;

exports[`build-gear getBuildHand base 2`] = `
{
  "entities": {
    "-1.-1": {
      "angle": 0,
      "center": {
        "x": 0,
        "y": 0,
      },
      "connections": [],
      "id": "-1.-1",
      "mass": 3.141592653589793,
      "networkId": "-1.-1",
      "position": {
        "x": -1,
        "y": -1,
      },
      "radius": 1,
      "size": {
        "x": 2,
        "y": 2,
      },
      "type": "Gear",
      "velocity": 0,
    },
  },
  "networks": {
    "-1.-1": {
      "entityIds": {
        "-1.-1": true,
      },
      "id": "-1.-1",
      "mass": 3.141592653589793,
      "rootId": "-1.-1",
    },
  },
  "tiles": {
    "-1.-1": {
      "entityId": "-1.-1",
    },
    "-1.0": {
      "entityId": "-1.-1",
    },
    "0.-1": {
      "entityId": "-1.-1",
    },
    "0.0": {
      "entityId": "-1.-1",
    },
  },
  "version": 1,
}
`;

exports[`build-gear getBuildHand base 3`] = `
{
  "action": {
    "target": {
      "angle": 0,
      "center": {
        "x": 0,
        "y": 0,
      },
      "connections": [],
      "id": "-1.-1",
      "mass": 3.141592653589793,
      "networkId": "-1.-1",
      "position": {
        "x": -1,
        "y": -1,
      },
      "radius": 1,
      "size": {
        "x": 2,
        "y": 2,
      },
      "type": "Gear",
      "velocity": 0,
    },
    "type": "chain",
  },
  "entities": {
    "-1.-1": {
      "angle": 0,
      "behavior": undefined,
      "center": {
        "x": 0,
        "y": 0,
      },
      "connections": [],
      "id": "-1.-1",
      "mass": 3.141592653589793,
      "networkId": "-1.-1",
      "position": {
        "x": -1,
        "y": -1,
      },
      "radius": 1,
      "size": {
        "x": 2,
        "y": 2,
      },
      "type": "Gear",
      "velocity": 0,
    },
  },
  "networks": {
    "-1.-1": {
      "entityIds": {
        "-1.-1": true,
      },
      "id": "-1.-1",
      "mass": 3.141592653589793,
      "rootId": "-1.-1",
    },
  },
  "type": "build",
  "valid": true,
}
`;
